<resources>
    <string name="app_name">Proiect Android</string>
    <string name="btn_start">Get started</string>
    <string name="lifestyle">Willpower knows \n no obstacles \n\n Dare to be great</string>
    <string name="h_user">Enter username</string>
    <string name="h_pass">Enter password</string>
    <string name="btn_signin">SIGN IN</string>
    <string name="btn_login">LOG IN</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_nav_home_PersonalData">Personal data</string>
    <string name="welcome">Welcome!</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="add_save">Save</string>
    <string name="add_sexF">Female</string>
    <string name="add_sexM">Male</string>
    <string name="age">Age</string>
    <string name="sex">Sex:</string>
    <string name="activity">What type of person are you?</string>
    <string name="add_username">Enter username</string>
    <string name="add_password">Enter password</string>
    <string name="nav_h_1">Hope you\'re having a good day!</string>
    <string name="main_nav_daily">Daily plans</string>
    <string name="main_nav_meals">Meals of the day</string>
    <string name="main_nav_statistics">Statistics</string>
    <string name="main_nav_exercise">Exercise</string>
    <string name="main_nav_details">Edit details</string>
    <string name="main_nav_feedback">Give feedback</string>
    <string name="main_nav_logout">Log out</string>
    <string name="bmi">"BMI calculator: "</string>
    <string name="under"><![CDATA[Underweight \n < 18.5]]></string>
    <string name="normal">Normal weight \n 18.5 - 25</string>
    <string name="over"><![CDATA[Overweight \n < 25 - 30]]></string>
    <string name="obese"><![CDATA[Obese \n > 30]]></string>
    <string-array name="lifestylearray">
        <item>Sedentary</item>
        <item>Semi-active</item>
        <item>Active</item>
        <item>Athletic</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cb_show_password">Show password</string>
    <string name="logged_in">Keep me logged in</string>
    <string name="myplan">My plans</string>
    <string name="rate">Rate our application</string>
    <string name="submitFeedback">Submit</string>
    <string name="want">Wanna tell us something?</string>
    <string name="value">0/100</string>
    <string name="program_zi">ziua</string>
    <string name="program_denumrie">denumire</string>
    <string name="program_interval">interval</string>
    <string name="program_prioritate">prioritate</string>
    <string name="addProgram">Add to my program</string>
    <string name="add">"Add "</string>
    <string name="meals">Meals</string>
    <string name="meal_calorii">calorii</string>
    <string name="meal_aport">aport energetic</string>
    <string name="meal_nume">"nume "</string>
    <string name="meal_tip">tip</string>
    <string name="mymeals">My meal</string>
    <string name="myprofile">My profile</string>
    <string name="idp">User ID:</string>
    <string name="usernameProfile">Username:</string>
    <string name="passwordProfile">Password:</string>
    <string name="agep">Age:</string>
    <string name="genderp">Gender:</string>
    <string name="heightp">Height:</string>
    <string name="weightP">Weight:</string>
    <string name="updateU">Update profile</string>
    <string name="deleteU">Delete profile</string>
    <string-array name="mealsTypeArray">
        <item>Meat-Fish</item>
        <item>Breads-Cereals</item>

        <item>Fruits-Vegetables</item>
    </string-array>
</resources>