<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddMeal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/armata"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/mymeals"
        android:id="@+id/tv_meals"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_tipMeal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_meals"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/armata"
        android:hint="@string/meal_tip"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_numeMeal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_tipMeal"
        android:layout_margin="16dp"
        android:fontFamily="@font/armata"
        android:hint="@string/meal_nume"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_calorii"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_numeMeal"
        android:layout_margin="16dp"
        android:fontFamily="@font/armata"
        android:inputType="number"
        android:hint="@string/meal_calorii"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_aport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_calorii"
        android:layout_margin="16dp"
        android:fontFamily="@font/armata"
        android:hint="@string/meal_aport"
        />


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/whiteMain"
        android:background="@drawable/circlebutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_aport"
        android:layout_marginTop="60dp"
        android:textSize="16dp"
        android:id="@+id/meal_add"
        />
</androidx.constraintlayout.widget.ConstraintLayout>