<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddProgram">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_zi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/armata"
        android:hint="@string/program_zi"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_denumire"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_zi"
        android:layout_margin="16dp"
        android:fontFamily="@font/armata"
        android:hint="@string/program_denumrie"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_interval"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_denumire"
        android:layout_margin="16dp"
        android:fontFamily="@font/armata"
        android:hint="@string/program_interval"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_prioritate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_interval"
        android:layout_margin="16dp"
        android:fontFamily="@font/armata"
        android:hint="@string/program_prioritate"
        />


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/whiteMain"
        android:background="@drawable/circlebutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_prioritate"
        android:layout_marginTop="60dp"
        android:textSize="16dp"
        android:id="@+id/program_add"
        />

</androidx.constraintlayout.widget.ConstraintLayout>