<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity2"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:src="@drawable/app_android"
        android:background="@color/redMain"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_twotone_account_circle_24"/>
        <EditText
            android:id="@+id/et_user"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/h_user"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_twotone_lock_24"/>
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/h_pass"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:orientation="vertical"
        >

    <CheckBox
        android:id="@+id/showpassword"
        android:fontFamily="@font/armata"
        android:text="@string/cb_show_password"
        app:layout_constraintBottom_toTopOf="@+id/et_pass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        />

    <CheckBox
        android:id="@+id/keep_logged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logged_in"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/armata"
        />

    </LinearLayout>



    <Button
        android:background="@drawable/circlebutton"
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_login"
        android:textColor="@color/whiteMain"
        android:fontFamily="@font/armata"
        android:textStyle="bold"
        />
    <Button
        android:background="@drawable/circlebutton"
        android:id="@+id/btn_signin"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/btn_signin"
        android:textColor="@color/whiteMain"
        android:fontFamily="@font/armata"
        android:textStyle="bold"
        />

</LinearLayout>