<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditDetailsFragment"
    android:background="@color/whiteMain">

    <ScrollView
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleProfile"
                android:layout_gravity="center"
                android:text="@string/myprofile"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/armata"

              />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idp"
                    android:textSize="15dp"
                    android:fontFamily="@font/armata"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:fontFamily="@font/armata"
                    android:id="@+id/idP"
                     />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usernameProfile"
                    android:textSize="15dp"
                    android:fontFamily="@font/armata"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:fontFamily="@font/armata"
                    android:id="@+id/usernameP"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordProfile"
                    android:textSize="15dp"
                    android:fontFamily="@font/armata"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:fontFamily="@font/armata"
                    android:id="@+id/passwordP"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agep"
                    android:fontFamily="@font/armata"
                    android:textSize="15dp"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:fontFamily="@font/armata"
                    android:id="@+id/ageP"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderp"
                    android:textSize="15dp"
                    android:fontFamily="@font/armata"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:fontFamily="@font/armata"
                    android:id="@+id/genderP"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heightp"
                    android:fontFamily="@font/armata"
                    android:textSize="15dp"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/armata"
                    android:layout_weight="9"
                    android:id="@+id/heightP"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weightP"
                    android:textSize="15dp"
                    android:fontFamily="@font/armata"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:fontFamily="@font/armata"
                    android:id="@+id/weightP"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/updateUser"
                    android:text="@string/updateU"
                    android:background="@drawable/circlebutton"
                    android:textColor="@color/whiteMain"
                    />
                <Button
                    android:layout_marginTop="20dp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/deleteUser"
                    android:text="@string/deleteU"
                    android:textColor="@color/whiteMain"
                    android:background="@drawable/circlebutton"
                    />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>